tests/negative/circular_definition.kwed
def A: Type { B }

def C: Type { A }

def B: Type { C }

